namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: k8sauto
spec: {}
status: {}
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: sandbox
spec: {}
status: {}
