blue1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  labels:
    app: bg-test
    color: blue
spec:
  replicas: 5
  selector:
    matchLabels:
      app: bg-test
  template:
    metadata:
      labels:
        app: bg-test
        color: blue
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: config-volume
        configMap:
          name: index-blue-v1
---
