service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    color: blue
