ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bg-test
  name: bg-test
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: bg-test
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bg-test
  namespace: sandbox
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    #ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: bg-test
            port:
              number: 80
